# VibeCrafted

./: .gitignore  .prettierignore  BIN_PATH_SETUP.md  CHANGELOG.md  Dockerfile  Makefile  README.md  install.ps1  install.sh  install.toml  plugin.json  pyproject.toml  vibecrafted-framework.plugin
.github/workflows/: install-linux.yml  portable.yml  release.yml  skill-loader.yml  static.yml
.vibecrafted/: GUIDELINES.md
ai-contexters/: SKILL.md
ai-contexters/references/: commands.md
bravesearch/: SKILL.md  brave_search.py
config/: memex.toml.example  mise.toml
config/hammerspoon/: init.lua
config/zellij/: aicx-status.sh  auto-theme.sh  config.kdl  loctree-drift.sh
docker/runtime/: Dockerfile  README.md  docker-compose.yml  entrypoint-runtime.sh  tailscale.env.example
docs/: CNAME  CONTRIBUTING-SKILLS.md  FAQ-ANSWERED.md  FAQ.md  FOUNDATION.md  HAMMERSPOON.md  INSTALL.md  MEMEX.md  QUICK_START.md  RELEASE_KICKOFF.md  RUNTIME_CONTAINER.md  WORKFLOWS.md  ZELLIJ.md  app.js  index.html  sandbox.md  styles.css
docs/installer/: 0_welcome_step.zsh.md  1_Explain_step.zsh.md  2_listing.zsh.md  3_examine.zsh.md  4_result.zsh.md  5_installation.zsh.md  DESIGN.md  LIVE_WIZARD.md  REFERENCE.md  SCAFFOLD.md
docs/pl/: faq.html  framework.html  index.html  quickstart.html
docs/plans/: META_22_SCAFFOLD_TO_RELEASE.md  META_22_SCAFFOLD_TO_RELEASE_ONGOING.md
docs/presence/: app.js  faq.html  framework.html  framework.js  quickstart.html  (+1 more)
operator/: Makefile
plans/: 2026-05-19-root-contract-fix-vc-agents-codex-brief.md  2026-05-19-task23-vc-agents-codex-brief.md  2026-05-19-watch-await-vc-agents-codex-brief.md
presence/: index.html
runtime/: README.md
scripts/: bootstrap-modal.sh  build_marketplace_bundle.py  install-foundations.sh  install-hammerspoon.sh  install-runtime.sh  installer_gui.py  installer_tui.py  setup_vibecraft.py  version_bump.py  vetcoders_install.py  vibecrafted
server/: Cargo.toml
server/control-core/: Cargo.toml
server/control-core/examples/: dump.rs
server/control-core/src/: events.rs  lib.rs  model.rs  read.rs
server/control-core/tests/: schema_fidelity.rs
server/web/: Cargo.toml
server/web/src/: app.rs  lib.rs  main.rs  theme.rs
server/web/styles/: fonts.css  main.css  tokens.css
skills/: LIVING_TREE_RULE.md
src/: app.rs  lib.rs  mux_gen.rs  polarize.rs  ui.rs
tests/: conftest.py  hammerspoon_smoke.sh  install_smoke.sh  memex_integration_test.sh  race_protection_test.sh  skill_launcher.rs  skill_loader_smoke.sh  state_contract.rs  zellij_layouts_smoke.sh
tools/: vc-skill-new.sh
vetcoders-decorate/: SKILL.md
vetcoders-init/: SKILL.md
vetcoders-prune/: SKILL.md
vetcoders-spawn/: SKILL.md
vetcoders-subagents/: SKILL.md
vibecrafted-core/: pyproject.toml
vibecrafted-core/tests/: test_agy_junie_pipeline.py  test_control_plane.py  test_iterm2_osc.py  test_iterm2_plugin.py  test_iterm2_profiles.py  test_memex_client.py  test_sandbox_adapter.py  test_supervisor.py
vibecrafted-core/vibecrafted_core/: __init__.py  agent_dispatch.py  control_plane.py  events.py  iterm2_osc.py  iterm2_profiles.py  memex_client.py  spawn.py  workflow.py  wrappers.py
vibecrafted-core/vibecrafted_core/iterm2_plugin/: README.md  __init__.py  install_autolaunch.py  vc_launcher.py  vc_status_bar.py  vc_triggers.py
vibecrafted-core/vibecrafted_core/sandbox/: README.md  __init__.py  adapter.py  msbserver_lifecycle.py  policy.py
vibecrafted-vm/: .dockerignore  .env.example  .gitignore  Containerfile  README.md  RUNBOOK.md  compose.yaml  entry.sh  vendor-src.sh  zshrc.template
(+204 files in other folders)
