# Self-contained member manifest — intentionally does NOT inherit via
# `*.workspace = true`. The sibling `web` crate (W1-b) pins its own versions
# and the shared `server/Cargo.toml` carries only `[workspace] members`, so
# control-core stays self-sufficient to avoid editing W1-b's shared root.
[package]
name = "control-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "BUSL-1.1"
authors = ["VetCoders <agents@vetcoders.io>"]
repository = "https://github.com/VetCoders/vibecrafted"
publish = false
description = "Read-only typed model of the Vibecrafted control plane (runs + events). One core, two frontends: web (axum, W1-b/W2) and TUI (vc-agent)."

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
